--- a/index.html
+++ b/index.html
@@ -1,87 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Clipboard landing page</title>
+
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree&display=swap" rel="stylesheet">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
+
+  <!-- stylesheet -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
+  <div class="container-fluid">
+    <!-- <section id="top"> -->
+    <div class="heading">
+      <h3>A history of everything you copy</h3>
 
-  A history of everything you copy
+      <p>Clipboard allows you to track and organize everything you
+        copy. Instantly access your clipboard on all your devices.</p>
+    </div>
+    <div class="buttons">
+      <button type="button" name="button">Download for iOS</button>
+      <button type="button" name="button">Download for Mac</button>
+    </div>
+    <!-- </section> -->
 
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
+    <!-- <section id="middle"> -->
+    <div class="middle">
 
-  Download for iOS
-  Download for Mac
+      <div class="mid1">
+        <h4>Keep track of your snippets</h4>
 
-  Keep track of your snippets
+        <p>Clipboard instantly stores any item you copy in the cloud,
+          meaning you can access your snippets immediately on all your
+          devices. Our Mac and iOS apps will help you organize everything.</p>
+      </div>
+      <div class="mid2">
+        <img src="images/image-computer.png" class="comp" alt="">
+        <h5>Quick Search</h5>
 
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
+        <p>Easily search your snippets by content, category, web address, application, and more.</p>
 
-  Quick Search
+        <h5>iCloud Sync</h5>
 
-  Easily search your snippets by content, category, web address, application, and more.
+        <p>Instantly saves and syncs snippets across all your devices.</p>
 
-  iCloud Sync
+        <h5>Complete History</h5>
 
-  Instantly saves and syncs snippets across all your devices.
+        <p>Retrieve any snippets from the first moment you started using the app.</p>
+      </div>
+      <div class="mid3">
+        <h4>Access Clipboard anywhere</h4>
 
-  Complete History
+        <p>Whether you’re on the go, or at your computer, you can access all your Clipboard
+          snippets in a few simple clicks.</p>
+      </div>
+      <div class="mid4">
+        <h4>Supercharge your workflow</h4>
 
-  Retrieve any snippets from the first moment you started using the app.
+        <p>We’ve got the tools to boost your productivity.</p>
+      </div>
+      <div class="mid5">
+        <h5>Create blacklists</h5>
 
-  Access Clipboard anywhere
+        <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
 
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
+        <h5>Plain text snippets</h5>
 
-  Supercharge your workflow
+        <p>Remove unwanted formatting from copied text for a consistent look.</p>
 
-  We’ve got the tools to boost your productivity.
+        <h5>Sneak preview</h5>
 
-  Create blacklists
+        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+      </div>
 
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+    </div>
 
-  Plain text snippets
+    <!-- </section> -->
 
-  Remove unwanted formatting from copied text for a consistent look.
+    <!-- <section id="bottom"> -->
+    <div class="ending">
+      <h4>Clipboard for iOS and Mac OS</h4>
 
-  Sneak preview
+      <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud
+        and you’re ready to start adding to your clipboard.</p>
+    </div>
+    <div class="">
+      <button type="button" name="button">Download for iOS</button>
+      <button type="button" name="button">Download for Mac</button>
+    </div>
+    <!-- </section> -->
 
-  Quick preview of all snippets on your Clipboard for easy access.
+    <!-- <section id="about"> -->
+    <div class="">
+      FAQs
+      Contact Us
+      Privacy Policy
+      Press Kit
+      Install Guide
+    </div>
+    <!-- </section> -->
+  </div>
 
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
-
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
-  
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
 </body>
+
 </html>
