--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- </section> -->
 
     <!-- <section id="middle"> -->
-    <div class="middle">
+    <!-- <div class="middle"> -->
 
       <div class="mid1">
         <h4>Keep track of your snippets</h4>
@@ -57,17 +57,20 @@
       </div>
       <div class="mid2">
         <img src="images/image-computer.png" class="comp" alt="">
-        <h5>Quick Search</h5>
+        <div class="midtext">
+          <h5>Quick Search</h5>
 
-        <p>Easily search your snippets by content, category, web address, application, and more.</p>
+          <p>Easily search your snippets by content, category, web address, application, and more.</p>
 
-        <h5>iCloud Sync</h5>
+          <h5>iCloud Sync</h5>
 
-        <p>Instantly saves and syncs snippets across all your devices.</p>
+          <p>Instantly saves and syncs snippets across all your devices.</p>
 
-        <h5>Complete History</h5>
+          <h5>Complete History</h5>
 
-        <p>Retrieve any snippets from the first moment you started using the app.</p>
+          <p>Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
+
       </div>
       <div class="mid3">
         <h4>Access Clipboard anywhere</h4>
@@ -94,7 +97,7 @@
         <p>Quick preview of all snippets on your Clipboard for easy access.</p>
       </div>
 
-    </div>
+    <!-- </div> -->
 
     <!-- </section> -->
 
