--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <div class="container-fluid">
     <!-- <section id="top"> -->
     <div class="heading">
+      <img src="images/logo.svg" class="headlogo" alt="">
       <h3>A history of everything you copy</h3>
 
       <p>Clipboard allows you to track and organize everything you
