--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   </style>
 
   <!-- stylesheet -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
-  <div class="container-fluid">
+  <!-- <div class="container-fluid"> -->
     <!-- <section id="top"> -->
     <div class="heading">
       <img src="images/logo.svg" class="headlogo" alt="">
@@ -41,8 +41,8 @@
         copy. Instantly access your clipboard on all your devices.</p>
     </div>
     <div class="buttons">
-      <button type="button" name="button">Download for iOS</button>
-      <button type="button" name="button">Download for Mac</button>
+      <button type="button" class="button1" name="button">Download for iOS</button>
+      <button type="button" class="button2" name="button">Download for Mac</button>
     </div>
     <!-- </section> -->
 
@@ -109,9 +109,9 @@
       <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud
         and you’re ready to start adding to your clipboard.</p>
     </div>
-    <div class="">
-      <button type="button" name="button">Download for iOS</button>
-      <button type="button" name="button">Download for Mac</button>
+    <div class="buttons">
+      <button type="button" class="button1" name="button">Download for iOS</button>
+      <button type="button" class="button2" name="button">Download for Mac</button>
     </div>
     <!-- </section> -->
 
@@ -124,7 +124,7 @@
       Install Guide
     </div>
     <!-- </section> -->
-  </div>
+  <!-- </div> -->
 
   <footer>
     <p class="attribution">
