--- a/index.html
+++ b/index.html
@@ -31,19 +31,23 @@
 </head>
 
 <body>
+  <img src="images/bg-header-desktop.png" class="bgdesk" alt="">
   <!-- <div class="container-fluid"> -->
     <!-- <section id="top"> -->
-    <div class="heading">
-      <img src="images/logo.svg" class="headlogo" alt="">
-      <h3>A history of everything you copy</h3>
+    <div class="head">
+      <div class="heading">
+        <img src="images/logo.svg" class="headlogo" alt="">
+        <h3>A history of everything you copy</h3>
 
-      <p>Clipboard allows you to track and organize everything you
-        copy. Instantly access your clipboard on all your devices.</p>
+        <p>Clipboard allows you to track and organize everything you
+          copy. Instantly access your clipboard on all your devices.</p>
+      </div>
+      <div class="buttons">
+        <button type="button" class="button1" name="button">Download for iOS</button>
+        <button type="button" class="button2" name="button">Download for Mac</button>
+      </div>
     </div>
-    <div class="buttons">
-      <button type="button" class="button1" name="button">Download for iOS</button>
-      <button type="button" class="button2" name="button">Download for Mac</button>
-    </div>
+
     <!-- </section> -->
 
     <!-- <section id="middle"> -->
