--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
           devices. Our Mac and iOS apps will help you organize everything.</p>
       </div>
       <div class="mid2">
-        <img src="images/image-computer.png" class="comp" alt="">
+        <div class="midimg">
+          <img src="images/image-computer.png" class="comp" alt="">
+        </div>
+
         <div class="midtext">
           <h5>Quick Search</h5>
 
