--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <body>
   <img src="images/bg-header-desktop.png" class="bgdesk" alt="">
+  <img src="images/bg-header-mobile.png" class="bgdesk1" alt="">
   <!-- <div class="container-fluid"> -->
     <!-- <section id="top"> -->
     <div class="head">
