--- a/index.html
+++ b/index.html
@@ -67,17 +67,14 @@
         </div>
 
         <div class="midtext">
-          <h5>Quick Search</h5>
+          <h5 class="midtext1">Quick Search</h5>
+          <p class="midtext2">Easily search your snippets by content, category, web address, application, and more.</p>
 
-          <p>Easily search your snippets by content, category, web address, application, and more.</p>
+          <h5 class="midtext1">iCloud Sync</h5>
+          <p class="midtext2">Instantly saves and syncs snippets across all your devices.</p>
 
-          <h5>iCloud Sync</h5>
-
-          <p>Instantly saves and syncs snippets across all your devices.</p>
-
-          <h5>Complete History</h5>
-
-          <p>Retrieve any snippets from the first moment you started using the app.</p>
+          <h5 class="midtext1">Complete History</h5>
+          <p class="midtext2">Retrieve any snippets from the first moment you started using the app.</p>
         </div>
 
       </div>
