--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   </style>
 
   <!-- stylesheet -->
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -33,8 +32,7 @@
 <body>
   <img src="images/bg-header-desktop.png" class="bgdesk" alt="">
   <img src="images/bg-header-mobile.png" class="bgdesk1" alt="">
-  <!-- <div class="container-fluid"> -->
-    <!-- <section id="top"> -->
+
     <div class="head">
       <div class="heading">
         <img src="images/logo.svg" class="headlogo" alt="">
@@ -48,11 +46,6 @@
         <button type="button" class="button2" name="button">Download for Mac</button>
       </div>
     </div>
-
-    <!-- </section> -->
-
-    <!-- <section id="middle"> -->
-    <!-- <div class="middle"> -->
 
       <div class="mid1">
         <h4>Keep track of your snippets</h4>
@@ -81,60 +74,97 @@
       <div class="mid3">
         <h4>Access Clipboard anywhere</h4>
 
-        <p>Whether you’re on the go, or at your computer, you can access all your Clipboard
+        <p class="mid3txt">Whether you’re on the go, or at your computer, you can access all your Clipboard
           snippets in a few simple clicks.</p>
       </div>
+      <img src="images/image-devices.png" class="devices" alt="">
       <div class="mid4">
         <h4>Supercharge your workflow</h4>
 
-        <p>We’ve got the tools to boost your productivity.</p>
+        <p class="mid3txt">We’ve got the tools to boost your productivity.</p>
       </div>
       <div class="mid5">
-        <h5>Create blacklists</h5>
+        <div class="">
+          <img src="images/icon-blacklist.svg" class="ico" alt="">
+          <h5>Create blacklists</h5>
 
-        <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+          <p class="mid5txt">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </div>
+        <div class="">
+          <img src="images/icon-text.svg" class="ico" alt="">
+          <h5>Plain text snippets</h5>
 
-        <h5>Plain text snippets</h5>
+          <p class="mid5txt">Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
+        <div class="">
+          <img src="images/icon-preview.svg" class="ico" alt="">
+          <h5>Sneak preview</h5>
 
-        <p>Remove unwanted formatting from copied text for a consistent look.</p>
+          <p class="mid5txt">Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
+      </div>
+      <div class="mid6">
+        <div class="">
+          <img src="images/logo-google.png" alt="">
+        </div>
+        <div class="">
+          <img src="images/logo-ibm.png" alt="">
+        </div>
+        <div class="">
+          <img src="images/logo-microsoft.png" alt="">
+        </div>
+        <div class="">
+          <img src="images/logo-hp.png" alt="">
+        </div>
+        <div class="">
+          <img src="images/logo-vector-graphics.png" alt="">
+        </div>
 
-        <h5>Sneak preview</h5>
-
-        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
       </div>
 
-    <!-- </div> -->
-
-    <!-- </section> -->
-
-    <!-- <section id="bottom"> -->
     <div class="ending">
       <h4>Clipboard for iOS and Mac OS</h4>
 
-      <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud
+      <p class="endtxt">Available for free on the App Store. Download for Mac or iOS, sync with iCloud
         and you’re ready to start adding to your clipboard.</p>
     </div>
     <div class="buttons">
       <button type="button" class="button1" name="button">Download for iOS</button>
       <button type="button" class="button2" name="button">Download for Mac</button>
     </div>
-    <!-- </section> -->
 
-    <!-- <section id="about"> -->
-    <div class="">
-      FAQs
-      Contact Us
-      Privacy Policy
-      Press Kit
-      Install Guide
+    <div class="footers">
+      <div class="foot1">
+        <img src="images/logo.svg" class="footerlogo" alt="">
+      </div>
+      <div class="foot2">
+        <div class="lists">
+          FAQs
+        </div>
+        <div class="lists">
+          Contact Us
+        </div>
+        <div class="lists">
+          Privacy Policy
+        </div>
+        <div class="lists">
+          Press Kit
+        </div>
+        <div class="lists">
+          Install Guide
+        </div>
+      </div>
+      <div class="foot3">
+        <img src="images/icon-facebook.svg" class="social" alt="">
+        <img src="images/icon-twitter.svg" class="social" alt="">
+        <img src="images/icon-instagram.svg" class="social" alt="">
+      </div>
     </div>
-    <!-- </section> -->
-  <!-- </div> -->
 
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/riteessshh">riteessshh</a>.
     </p>
   </footer>
 </body>
