--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Frontend Mentor | Clipboard landing page</title>
+  <title>Clipboard</title>
 
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree&display=swap" rel="stylesheet">
