--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
       </div>
     </div>
 
-  <footer>
+<!--   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://www.frontendmentor.io/profile/riteessshh">riteessshh</a>.
     </p>
-  </footer>
+  </footer> -->
 </body>
 
 </html>
